--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
+  "engines": { "node": ">=18" }
   },
   "dependencies": {
     "@line/bot-sdk": "^7.5.2",
