--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "line-gatekeeper-bot",
-  "version": "2.1.0",
-  "description": "LINE OA soft-gatekeeper with contact Flex + admin notifications (no LIFF button)",
+  "version": "2.1.1",
+  "description": "LINE OA soft-gatekeeper with contact Flex + admin notifications (no LIFF button).",
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
-  "engines": { "node": ">=18" }
+  },
+  "engines": {
+    "node": ">=18"
   },
   "dependencies": {
     "@line/bot-sdk": "^7.5.2",
