--- a/package.json
+++ b/package.json
@@ -4,12 +4,8 @@
   "description": "LINE OA soft-gatekeeper with contact Flex + admin notifications (no LIFF button).",
   "type": "commonjs",
   "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
-  "engines": {
-    "node": ">=18"
-  },
+  "scripts": { "start": "node index.js" },
+  "engines": { "node": ">=18" },
   "dependencies": {
     "@line/bot-sdk": "^7.5.2",
     "dotenv": "^16.4.5",
