--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "line-gatekeeper-bot",
-  "version": "2.1.0",
-  "type": "commonjs",
+  "name": "line-gatekeeper",
+  "version": "1.0.0",
+  "description": "A LINE OA automation bot (Line Gatekeeper) built with Node.js and Express.",
   "main": "index.js",
-  "scripts": { "start": "node index.js" },
-  "dependencies": {
-    "@line/bot-sdk": "^7.5.2",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "nodemailer": "^6.9.13"
+  "type": "commonjs",
+  "scripts": {
+    "start": "node index.js"
   },
-  "engines": { "node": ">=18" }
+  "dependencies": {
+    "@line/bot-sdk": "^7.5.0",
+    "express": "^4.18.2",
+    "dotenv": "^16.3.1",
+    "nodemailer": "^6.9.5",
+    "brain.js": "^2.0.0"
+  }
 }
